--- a/forKurs/forKurs2/templates/payed.html
+++ b/forKurs/forKurs2/templates/payed.html
@@ -9,7 +9,7 @@
 
     </head>
 <body>
-    <p style="text-align: center; margin-top:300px;">
+    <p style="text-align: center; margin-top:300px; color:red; font-size:24px;">
         {{err}}
     </p>
 
